--- a/roles/mongodb/defaults/main.yaml
+++ b/roles/mongodb/defaults/main.yaml
@@ -2,3 +2,5 @@ mongodb_username: "{{ database_vars.mongodb.mongodb_username }}"
 mongodb_password: "{{ database_vars.mongodb.mongodb_password }}"
 mongodb_data_dir: "{{ database_vars.mongodb.mongodb_data_dir }}"
 replSetName: "{{ database_vars.mongodb.replSetName }}"
+keyfile_path: "{{ database_vars.mongodb.keyfile_path }}"
+use_custom_keyfile: "{{ database_vars.mongodb.use_custom_keyfile }}"
