--- a/roles/mongodb/tasks/standalone.yaml
+++ b/roles/mongodb/tasks/standalone.yaml
@@ -1,14 +1,53 @@
 
-    - name: Download and add MongoDB GPG key
+    - name: Check avx support
+      shell: grep flags -m1 /proc/cpuinfo | grep avx
+      ignore_errors: yes
+      register: avx
+
+# If AVX is available ----------------------------------------------------
+
+    - name: Download and add MongoDB 7 GPG key
+      when: avx.rc == 0
       apt_key:
         url: https://www.mongodb.org/static/pgp/server-7.0.asc
         keyring: /usr/share/keyrings/mongodb-server-7.0.gpg
         state: present
 
-    - name: Add MongoDB apt repository
+    - name: Add MongoDB 7 apt repository
+      when: avx.rc == 0
       apt_repository:
         repo: deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-7.0.gpg ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse
         state: present
+
+# If AVX is not available, installing MongoDB 4.4 ------------------------
+
+    - name: Download libssl1.1 package
+      when: avx.rc != 0
+      get_url:
+        url: http://archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2_amd64.deb
+        dest: /tmp/libssl1.1_1.1.1f-1ubuntu2_amd64.deb
+
+    - name: Install libssl1.1 package
+      when: avx.rc != 0
+      become: yes
+      apt:
+        deb: /tmp/libssl1.1_1.1.1f-1ubuntu2_amd64.deb
+        state: present
+
+    - name: Add MongoDB 4.4 repository key 
+      when: avx.rc != 0
+      apt_key:
+        url: https://www.mongodb.org/static/pgp/server-4.4.asc
+        state: present
+        keyring: /usr/share/keyrings/mongodb-server-4.4.gpg
+
+    - name: Add MongoDB 4.4 repository
+      when: avx.rc != 0
+      apt_repository:
+        repo: "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-4.4.gpg ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse"
+        state: present
+
+# ------------------------------------------------------------------------
 
     - name: Install MongoDB
       apt:
