--- a/roles/uninstall/tasks/uninstall_redis.yaml
+++ b/roles/uninstall/tasks/uninstall_redis.yaml
@@ -13,6 +13,34 @@
         name: redis-server
         state: absent
 
+    - name: Stop redis server
+      systemd:
+        name: redis_{{ port }}
+        enabled: yes
+        state: stopped
+      vars:
+        port: "{{ item }}"
+      loop:
+        - 7000
+        - 7001
+        - 6379
+
+    - name: Delete configuration on rc.local
+      lineinfile:
+        path: /etc/rc.local
+        state: absent
+        backrefs: no
+        line: "{{ item }}"
+      with_items:
+        - echo never > /sys/kernel/mm/transparent_hugepage/enabled
+        - sysctl -w net.core.somaxconn=65535
+
+    - name: Remove vm.overcommit_memory to sysctl.conf
+      lineinfile:
+        path: /etc/sysctl.conf
+        line: 'vm.overcommit_memory=1'
+        state: absent
+
     - name: Delete Redis data directory
       file:
         path: "{{ item }}"
